refactor: widgets