@@ -1,23 +1,28 @@
 package pw.rebux.parkourdisplay.core.widget;
 
-import net.labymod.api.client.component.Component;
+import static net.labymod.api.client.component.Component.translatable;
+
+import lombok.Getter;
+import lombok.experimental.Accessors;
 import net.labymod.api.client.gui.hud.hudwidget.text.TextHudWidget;
+import net.labymod.api.client.gui.hud.hudwidget.text.TextHudWidgetConfig;
 import net.labymod.api.client.gui.hud.hudwidget.text.TextLine;
+import net.labymod.api.client.gui.screen.widget.widgets.input.SliderWidget.SliderSetting;
+import net.labymod.api.configuration.loader.property.ConfigProperty;
 import pw.rebux.parkourdisplay.core.ParkourDisplayAddon;
 import pw.rebux.parkourdisplay.core.util.MathsUtil;
-import pw.rebux.parkourdisplay.core.widget.config.JumpAngleWidgetConfig;
+import pw.rebux.parkourdisplay.core.widget.JumpAngleWidget.JumpAngleWidgetConfig;
 
 public class JumpAngleWidget extends TextHudWidget<JumpAngleWidgetConfig> {
 
   private final ParkourDisplayAddon addon;
 
   private TextLine textLine;
+  private String stringFormat;
 
   public JumpAngleWidget(ParkourDisplayAddon addon) {
     super("jump_angle", JumpAngleWidgetConfig.class);
-
     this.bindCategory(addon.category());
-
     this.addon = addon;
   }
 
@@ -25,18 +30,23 @@ public class JumpAngleWidget extends TextHudWidget<JumpAngleWidgetConfig> {
   public void load(JumpAngleWidgetConfig config) {
     super.load(config);
 
-    textLine = createLine(Component.translatable("parkourdisplay.labels.jump_angle"), "");
+    this.textLine = createLine(translatable("parkourdisplay.labels.jump_angle"), 0);
+    this.stringFormat = "%%.%df".formatted(config.decimalPlaces().get());
   }
 
   @Override
   public void onTick(boolean isEditorContext) {
-    var decimalPlaces = this.config.decimalPlaces().get();
-    var stringFormat = "%%.%df".formatted(decimalPlaces);
+    var jumpYaw = this.addon.playerParkourState().jumpYaw();
+    var facing = String.format(this.stringFormat, MathsUtil.formatYaw(jumpYaw));
 
-    var facing = String.format(
-        stringFormat,
-        MathsUtil.formatYaw(this.addon.playerParkourState().jumpYaw()));
+    this.textLine.updateAndFlush(facing);
+  }
 
-    textLine.updateAndFlush(facing);
+  @Accessors(fluent = true)
+  @Getter
+  public static class JumpAngleWidgetConfig extends TextHudWidgetConfig {
+
+    @SliderSetting(min = 0, max = 10)
+    private final ConfigProperty<Integer> decimalPlaces = new ConfigProperty<>(3);
   }
 }
