@@ -1,22 +1,27 @@
 package pw.rebux.parkourdisplay.core.widget;
 
-import net.labymod.api.client.component.Component;
+import static net.labymod.api.client.component.Component.translatable;
+
+import lombok.Getter;
+import lombok.experimental.Accessors;
 import net.labymod.api.client.gui.hud.hudwidget.text.TextHudWidget;
+import net.labymod.api.client.gui.hud.hudwidget.text.TextHudWidgetConfig;
 import net.labymod.api.client.gui.hud.hudwidget.text.TextLine;
+import net.labymod.api.client.gui.screen.widget.widgets.input.SliderWidget.SliderSetting;
+import net.labymod.api.configuration.loader.property.ConfigProperty;
 import pw.rebux.parkourdisplay.core.ParkourDisplayAddon;
-import pw.rebux.parkourdisplay.core.widget.config.LastFortyFiveWidgetConfig;
+import pw.rebux.parkourdisplay.core.widget.LastFortyFiveWidget.LastFortyFiveWidgetConfig;
 
 public class LastFortyFiveWidget extends TextHudWidget<LastFortyFiveWidgetConfig> {
 
   private final ParkourDisplayAddon addon;
 
   private TextLine textLine;
+  private String stringFormat;
 
   public LastFortyFiveWidget(ParkourDisplayAddon addon) {
     super("last_forty_five", LastFortyFiveWidgetConfig.class);
-
     this.bindCategory(addon.category());
-
     this.addon = addon;
   }
 
@@ -24,15 +29,22 @@ public class LastFortyFiveWidget extends TextHudWidget<LastFortyFiveWidgetConfig
   public void load(LastFortyFiveWidgetConfig config) {
     super.load(config);
 
-    this.textLine = createLine(Component.translatable("parkourdisplay.labels.last_forty_five"), "");
+    this.textLine = createLine(translatable("parkourdisplay.labels.last_forty_five"), 0);
+    this.stringFormat = "%%.%df".formatted(config.decimalPlaces().get());
   }
 
   @Override
   public void onTick(boolean isEditorContext) {
-    var decimalPlaces = this.config.decimalPlaces().get();
-    var stringFormat = "%%.%df".formatted(decimalPlaces);
-    var lastFF = String.format(stringFormat, addon.playerParkourState().lastFF());
+    var lastFF = String.format(this.stringFormat, this.addon.playerParkourState().lastFF());
 
     this.textLine.updateAndFlush(lastFF);
+  }
+
+  @Getter
+  @Accessors(fluent = true)
+  public static class LastFortyFiveWidgetConfig extends TextHudWidgetConfig {
+
+    @SliderSetting(min = 0, max = 10)
+    private final ConfigProperty<Integer> decimalPlaces = new ConfigProperty<>(3);
   }
 }
