@@ -1,22 +1,28 @@
 package pw.rebux.parkourdisplay.core.widget;
 
-import net.labymod.api.client.component.Component;
+import static net.labymod.api.client.component.Component.translatable;
+
+import lombok.Getter;
+import lombok.experimental.Accessors;
 import net.labymod.api.client.gui.hud.hudwidget.text.TextHudWidget;
+import net.labymod.api.client.gui.hud.hudwidget.text.TextHudWidgetConfig;
 import net.labymod.api.client.gui.hud.hudwidget.text.TextLine;
+import net.labymod.api.client.gui.screen.widget.widgets.input.SliderWidget.SliderSetting;
+import net.labymod.api.client.gui.screen.widget.widgets.input.SwitchWidget.SwitchSetting;
+import net.labymod.api.configuration.loader.property.ConfigProperty;
 import pw.rebux.parkourdisplay.core.ParkourDisplayAddon;
-import pw.rebux.parkourdisplay.core.widget.config.VelocityWidgetConfig;
+import pw.rebux.parkourdisplay.core.widget.VelocityWidget.VelocityWidgetConfig;
 
 public class VelocityWidget extends TextHudWidget<VelocityWidgetConfig> {
 
   private final ParkourDisplayAddon addon;
 
   private final TextLine[] textLines = new TextLine[3];
+  private String stringFormat;
 
   public VelocityWidget(ParkourDisplayAddon addon) {
     super("velocity", VelocityWidgetConfig.class);
-
     this.bindCategory(addon.category());
-
     this.addon = addon;
   }
 
@@ -25,30 +31,42 @@ public class VelocityWidget extends TextHudWidget<VelocityWidgetConfig> {
     super.load(config);
 
     if (config.singleLine().get()) {
-      textLines[0] = createLine(Component.translatable("parkourdisplay.labels.velocity.single"), "");
+      this.textLines[0] = createLine(
+          translatable("parkourdisplay.labels.velocity.single"),
+          "%s %s %s".formatted(0, 0, 0));
     } else {
-      textLines[0] = createLine(Component.translatable("parkourdisplay.labels.velocity.x"), "");
-      textLines[1] = createLine(Component.translatable("parkourdisplay.labels.velocity.y"), "");
-      textLines[2] = createLine(Component.translatable("parkourdisplay.labels.velocity.z"), "");
+      this.textLines[0] = createLine(translatable("parkourdisplay.labels.velocity.x"), 0);
+      this.textLines[1] = createLine(translatable("parkourdisplay.labels.velocity.y"), 0);
+      this.textLines[2] = createLine(translatable("parkourdisplay.labels.velocity.z"), 0);
     }
+
+    this.stringFormat = "%%.%df".formatted(config.decimalPlaces().get());
   }
 
   @Override
   public void onTick(boolean isEditorContext) {
-    var singleLine = this.config.singleLine().get();
-    var decimalPlaces = this.config.decimalPlaces().get();
-    var stringFormat = "%%.%df".formatted(decimalPlaces);
+    var parkourState = this.addon.playerParkourState();
+    var x = String.format(this.stringFormat, parkourState.velocityX());
+    var y = String.format(this.stringFormat, parkourState.velocityY());
+    var z = String.format(this.stringFormat, parkourState.velocityZ());
 
-    var x = String.format(stringFormat, this.addon.playerParkourState().velocityX());
-    var y = String.format(stringFormat, this.addon.playerParkourState().velocityY());
-    var z = String.format(stringFormat, this.addon.playerParkourState().velocityZ());
-
-    if (singleLine) {
+    if (this.config.singleLine().get()) {
       this.textLines[0].updateAndFlush("%s %s %s".formatted(x, y, z));
     } else {
       this.textLines[0].updateAndFlush(x);
       this.textLines[1].updateAndFlush(y);
       this.textLines[2].updateAndFlush(z);
     }
+  }
+
+  @Getter
+  @Accessors(fluent = true)
+  public static class VelocityWidgetConfig extends TextHudWidgetConfig {
+
+    @SwitchSetting
+    private final ConfigProperty<Boolean> singleLine = new ConfigProperty<>(false);
+
+    @SliderSetting(min = 0, max = 10)
+    private final ConfigProperty<Integer> decimalPlaces = new ConfigProperty<>(3);
   }
 }
